# rateguard

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: gemini_concurrent_example.py
src/rateguard/: __init__.py  main.py
tests/: test_rate_limit.py
