[project]
name = "rateguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Subhranil Sarkar", email = "subhranil2605@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
