[project]
name = "rateguard"
version = "0.1.3"
description = "A lightweight Python decorator for thread-safe rate limiting of function calls."
readme = "README.md"
authors = [
    { name = "Subhranil Sarkar", email = "subhranil2605@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
